fixes: change img absolute path to relative

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         <div class="row">
           <div class="col-md-6 d-flex mb-5 mb-md-0">
             <img
-              src="/img/explore-section1.jpg"
+              src="./img/explore-section1.jpg"
               alt="explore section image"
               style="width: 100%"
               class="img-fluid mb-5 rounded-circle m-auto"
@@ -242,7 +242,7 @@
         <div class="row">
           <div class="col-md-6 d-flex mb-5 mb-md-0 order-2">
             <img
-              src="/img/create-section1.jpg"
+              src="./img/create-section1.jpg"
               alt="explore section image"
               style="width: 100%"
               class="img-fluid mb-5 rounded-circle m-auto"
@@ -299,7 +299,7 @@
         <div class="row">
           <div class="col-md-6 d-flex mb-5 mb-md-0">
             <img
-              src="/img/share-section1.jpg"
+              src="./img/share-section1.jpg"
               alt="explore section image"
               style="width: 100%"
               class="img-fluid mb-5 rounded-circle m-auto"
